added python bindings

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,10 @@
+FUSE core
+---------
+
 Miklos Szeredi     <mszeredi@inf.bme.hu>
+
+
+Python bindings
+---------------
+
+Jeff Epler         <jepler@unpythonic.dhs.org>
