--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,9 @@ Python bindings
 ---------------
 
 Jeff Epler         <jepler@unpythonic.dhs.org>
+
+
+Perl bindings
+-------------
+
+Mark Glines        <mark@glines.org>
