--- a/perl/Changes
+++ b/perl/Changes
@@ -6,3 +6,7 @@ Revision history for Perl extension Fuse.
 
 0.02 Sun Dec 2 18:59:56 2001
     - works well enough to release, but still needs testing
+
+0.03 Wed Dec 5 02:17:52 2001
+    - changed getattr() to smell like perl's stat()
+	- fleshed out the documentation a bit
