--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 	
 	* Added statfs() support to kernel, lib, examples, and perl!
 
+2001-12-26  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Better cross compilation support
+
+	* Ported to Compaq IPAQ
+
 2001-12-20  Miklos Szeredi <mszeredi@inf.bme.hu>
 	
 	* Added function fuse_get_context() to library API (inspired by
