--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-09  Miklos Szeredi <mszeredi@inf.bme.hu>
 
+	* Version 0.95 released
+	
+2002-01-09  Miklos Szeredi <mszeredi@inf.bme.hu>
+
 	* Revaidate all path components not just the last, this means a
 	very small performance penalty for being more up-to-date.
 
