--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,10 @@
 	* Change passing fuse include dir to 2.6 kernel make system more
 	robust (hopefully fixes problems seen on SuSE 9.1)
 
+	* Fix deadlock between page writeback completion and truncate
+	(bug found by Valient Gough with the fsx-linux utility)
+
+
 2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Released 1.2
