--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-06  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Make RELEASE method synchronous.  This fixes an abort in libfuse
+	if FORGET was received earlier than the last RELEASE (bug found
+	with the LTP test-suite)
+
 2004-07-04  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Fix race between truncate and writepage (fsx-linux now runs
