--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-14  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 1.3
+	
 2004-07-08  Miklos Szeredi <miklos@szeredi.hu>
 
 	* When performing create or remove operation, refresh the parent's
