--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+What is new in 1.3
+
+* Thanks to user bugreports and stress testing with LTP and sfx-linux
+a number of bugs were fixed, some quite serious.
+
+* Fix compile problems with recent SuSE kernles
+
 What is new in 1.2
 
 * Fix mount problems on recent 2.6 kernels with SELinux enabled
