--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-01  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add -D_REENTRANT to the compile flags
+ 
 2004-08-16  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Change release method to be non-interruptible.  Fixes bug
