--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-14  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Release 1.4
+	
 2004-09-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Check temporary file creation failure in do_getdir().  Bug
