--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-10  Miklos Szeredi <miklos@szeredi.hu>
 
+	* Released 2.1-pre0
+
+2004-11-10  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Separate configure for the kernel directory
 
 	* Don't allow write to return more than 'count'
