--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 
 	* Check superblock of proc file in addition to inode number
 
+	* Fix reace between request_send_noreply() and fuse_dev_release()
+
 2004-11-10  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.1-pre0
