--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-14  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix bug in fuse_readpages() causing Oops in certain situations.
+	Bug found by Vincenzo Ciancia.
+
 2004-11-11  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Check kernel interface version in fusermount to prevent
