--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-14  Miklos Szeredi <miklos@szeredi.hu>
 
+	* Released 2.1-pre1
+
+2004-11-14  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Fix bug in fuse_readpages() causing Oops in certain situations.
 	Bug found by Vincenzo Ciancia.
 
