--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-03  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.1
+
 2004-12-01  Miklos Szeredi <miklos@szeredi.hu>
 
 	* move linux/fuse.h to fuse_kernel.h
