--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 	needed by filesystems to implement some argument manipulations
 	correctly
 
+	* fuse_opt: fix memory leak in handling "--" option
+
 2006-01-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* kernel: fix detection of case when fuse is not configured into
