--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-21  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.5.1
+
 2006-01-20  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Sanitize storage type and help message in mount_bsd.c.  Patch
