--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* lib: Fix use after free in fuse_flush().  Reported by Ron
+	Lindman
+
 2006-12-04  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix warnings with gcc-4.1 on 64bit archs.  Report from
