--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-12-15  Miklos Szeredi <miklos@szeredi.hu>
 
+	* fusermount: Fix detection of fuseblk.  Reported by Szakacsits
+	Szabolcs
+
 	* lib: Fix use after free in fuse_flush().  Reported by Ron
 	Lindman
 
