Fix possible double lock in certain cases if request is interrupted

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* Build fix for 2.6.16 vanila and 2.6.15 FC5 kernels.  Patch from
 	Ian Abbott
 
+	* Fix possible double lock in certain cases if request is
+	interrupted
+
 2007-01-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix abort in fuse_new() compatibility API for opts == NULL case.
