--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-28  Miklos Szeredi <miklos@szeredi.hu>
+
+	* kernel: fix BUG in control filesystem if it is umounted and
+	mounted again, while some fuse filesystems are present.
+	Bugreport from Florent Mertens
+
 2007-01-22  Miklos Szeredi <miklos@szeredi.hu>
 
 	* lib/Makefile.am: actually link libfuse against libfuse_libs
