--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-02  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix regression caused by "Fix possible double lock in certain
+	cases if request is interrupted" on 2007-01-19.  Reported by José
+	Antonio Sánchez
+
+2007-01-30  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.6.2
+
 2007-01-28  Miklos Szeredi <miklos@szeredi.hu>
 
 	* kernel: fix BUG in control filesystem if it is umounted and
