--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-04  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.6.3
+
+2007-02-04  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Compile fuseblk for kernels which don't have an option to turn
+	off the block layer (CONFIG_BLOCK).  Reported by Szakacsits
+	Szabolcs
+
 2007-02-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix regression caused by "Fix possible double lock in certain
