--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-26  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix detection of installed fuse in init script.  Reported and
+	fix suggested by Davide Canova
+
 2007-02-05  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix 2.6.9 RHEL kernels, which have compatibility mutex.h, but
