--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-05  Miklos Szeredi <miklos@szeredi.hu>
+
+	* mount.fuse should handle spaces in paths.  Debian Bug#417834.
+	Reported by Alexander Blazej
+
 2007-03-05  Miklos Szeredi <miklos@szeredi.hu>
 
 	* mount.fuse should use /bin/bash.  Debian Bug#413403.  Reported
