--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-04-28  Miklos Szeredi <miklos@szeredi.hu>
 
+	* Released 2.6.5
+
+2007-04-28  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Fix in typo in mount.fuse.  Reported by Jakub Moc
 
 2007-04-27  Miklos Szeredi <miklos@szeredi.hu>
