--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-19  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.7.3
+
 2008-02-13  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add missing bdi_init() and bdi_destroy() calls for 2.6.24
