--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add missing pthread link for libulockmgr.  Patch by  Petr Salinger
+
 2009-06-16  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add missing fuse_reply_bmap to versionscript.  Debian
