--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-01-26  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.7.5
+
 2010-01-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix race if two "fusermount -u" instances are run in parallel.
