--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-08  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Open /dev/null for write instead of read for redirecting stdout
+	and stderr
+
 2010-10-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	Use LTLIBICONV when linking libfuse.  This fixes building against
