--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-09  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix hang in wait_on_path().  Reported by Ville Silventoinen
+
 2011-10-13  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Reply to request with ENOMEM in case of failure to allocate
