--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-25  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Released 2.8.7
+
 2012-01-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Remove unnecessary mutex unlock at the end of multithreaded
