--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-06-29  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: fix possible memory leak.  Reported by Jose R. Guzman
+
 2015-05-22  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.9.4
