--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-Unreleased Changes
-==================
+FUSE 2.9.5 (2016-01-14)
+=======================
 
 * New maintainer: Nikolaus Rath <Nikolaus@rath.org>. Many thanks to
   Miklos Szeredi <miklos@szeredi.hu> for bringing FUSE to where it is
