--- a/AUTHORS
+++ b/AUTHORS
@@ -50,3 +50,4 @@ Riku Voipio <riku.voipio@linaro.org>
 Roland Bauerschmidt <rb@debian.org>
 Sebastian Pipping <sebastian@pipping.org>
 therealneworld@gmail.com <therealneworld@gmail.com>
+Winfried Koehler <w_scan@gmx-topmail.de>
