--- a/doc/fusermount.1
+++ b/doc/fusermount.1
@@ -10,6 +10,7 @@
 Filesystem in Userspace (FUSE) is a simple interface for userspace programs to export a virtual filesystem to the Linux kernel. It also aims to provide a secure method for non privileged users to create and mount their own filesystem implementations.
 .PP
 \fBfusermount\fR is a program to mount and unmount FUSE filesystems.
+To work, it must be set-uid root.
 
 .SH OPTIONS
 .IP "\-h" 4
