Added ChangeLog entry for hardening patches.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Unreleased Changes
+==================
+
+* The fusermount binary has been hardened in several ways to reduce
+  potential attack surface. Most importantly, mountpoints and mount
+  options must now match a hard-coded whitelist. It is expected that
+  this whitelist covers all regular use-cases.
+
 FUSE 2.9.8
 ==========
 
