--- a/AUTHORS
+++ b/AUTHORS
@@ -43,5 +43,6 @@ Olivier Blin <olivier.blin@softathome.com>
 Ratna_Bolla@dell.com <Ratna_Bolla@dell.com>
 Reuben Hawkins <reubenhwk@gmail.com>
 Roland Bauerschmidt <rb@debian.org>
+Rostislav Skudnov <rostislav@tuxera.com>
 Sebastian Pipping <sebastian@pipping.org>
 therealneworld@gmail.com <therealneworld@gmail.com>
