--- a/AUTHORS
+++ b/AUTHORS
@@ -43,6 +43,7 @@ AsumFace <asumface@gmail.com>
 Banglang <banglang.huang@foxmail.com>
 Baptiste Daroussin <bapt@FreeBSD.org>
 Benjamin Barenblat <bbaren@google.com>
+Bernd Schubert <bernd.schubert@fastmail.fm>
 Bernd Schubert <bschubert@ddn.com>
 Bill Zissimooulos <billziss@navimatics.com>
 Bill Zissimopoulos <billziss@navimatics.com>
@@ -83,6 +84,7 @@ Fedor Korotkov <fedor.korotkov@gmail.com>
 Feng Shuo <steve.shuo.feng@gmail.com>
 ferivoz <72023087+ferivoz@users.noreply.github.com>
 Feverfew <Feverfew@users.noreply.github.com>
+Fina Wilke <code@felinira.net>
 Florian Weimer <fw@deneb.enyo.de>
 Forty-Bot <Forty-Bot@users.noreply.github.com>
 Frank Dinoff <fdinoff@google.com>
@@ -148,6 +150,7 @@ mkmm@gmx-topmail.de <mkmm@gmx-topmail.de>
 Natanael Copa <ncopa@alpinelinux.org>
 Niels de Vos <ndevos@redhat.com>
 Nikolaus Rath <Nikolaus@rath.org>
+Nozomi Miyamori <99280467+nm004@users.noreply.github.com>
 Oded Arbel <oded@geek.co.il>
 Olivier Blin <olivier.blin@softathome.com>
 pablomh <pablomh@gmail.com>
